<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.edgar.yurihouse.MainActivity">

    <item
        android:id="@+id/filter_region_action_all"
        android:orderInCategory="0"
        android:title="@string/filter_region_all_string"
        app:showAsAction="never" />

    <item
        android:id="@+id/filter_region_action_jp"
        android:orderInCategory="1"
        android:title="@string/filter_region_jp_string"
        app:showAsAction="never" />

    <item
        android:id="@+id/filter_region_action_cn"
        android:orderInCategory="2"
        android:title="@string/filter_region_cn_string"
        app:showAsAction="never" />

    <item
        android:id="@+id/filter_region_action_en"
        android:orderInCategory="3"
        android:title="@string/filter_region_en_string"
        app:showAsAction="never" />

    <item
        android:id="@+id/filter_region_action_hktw"
        android:orderInCategory="4"
        android:title="@string/filter_region_hktw_string"
        app:showAsAction="never" />

    <item
        android:id="@+id/filter_region_action_kr"
        android:orderInCategory="5"
        android:title="@string/filter_region_kr_string"
        app:showAsAction="never" />


    <item
        android:id="@+id/filter_region_action_other"
        android:orderInCategory="6"
        android:title="@string/filter_region_other_string"
        app:showAsAction="never" />

</menu>