<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.edgar.yurihouse.MainActivity">

    <item
        android:id="@+id/filter_order_action_default"
        android:orderInCategory="0"
        android:title="@string/filter_order_default_string"
        app:showAsAction="never" />
    <item
        android:id="@+id/filter_order_action_click"
        android:orderInCategory="1"
        android:title="@string/filter_order_click_string"
        app:showAsAction="never" />

    <item
        android:id="@+id/filter_order_action_update"
        android:orderInCategory="2"
        android:title="@string/filter_order_update_string"
        app:showAsAction="never" />


</menu>