<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.edgar.yurihouse.MainActivity">

    <item
        android:id="@+id/main_menu_action_filter"
        android:icon="@drawable/ic_filter"
        android:orderInCategory="0"
        android:title="@string/menu_filter_string"
        app:showAsAction="always" />

    <item
        android:id="@+id/main_menu_action_grid"
        android:icon="@drawable/ic_grid_off"
        android:orderInCategory="1"
        android:title="@string/grid_mode_off_string"
        app:showAsAction="always" />

    <item
        android:id="@+id/main_menu_action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="2"
        android:title="@string/menu_search_string"
        app:showAsAction="always"/>

</menu>