<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MangaActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        app:elevation="0dp"
        android:elevation="0dp"
        android:fitsSystemWindows="true"
        android:background="@color/defaultBgColor"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            app:titleTextAppearance="@style/InfoCollapsedTitle"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_collapseMode="pin"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/app_name" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="168dp"
            app:cardElevation="4dp"
            android:layout_margin="4dp"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed">

            <include layout="@layout/layout_manga_basic_infos" />

        </android.support.v7.widget.CardView>

        <android.support.design.widget.TabLayout
            android:id="@+id/info_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="enterAlways"
            app:tabIndicatorColor="@color/colorBlack"
            app:tabIndicatorHeight="3dp"
            app:tabMode="fixed"
            android:layout_marginBottom="4dp"
            app:tabSelectedTextColor="@color/colorBlack"
            app:tabTextAppearance="@style/InfoTabTextStyle"
            app:tabTextColor="@color/secondary_text">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_related_chapter_title" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_chapter_list_title" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_comment_title" />
        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/info_view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

</android.support.design.widget.CoordinatorLayout>